; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_compile.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lpcode.c_compile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32*, i32 }
%struct.TYPE_9__ = type { i32, i32*, %struct.TYPE_8__* }

@NOINST = common dso_local global i32 0, align 4
@fullset = common dso_local global i32 0, align 4
@IEnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @compile(i32* %0, %struct.TYPE_8__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_9__, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %4, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 2
  store %struct.TYPE_8__* %6, %struct.TYPE_8__** %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  store i32 0, i32* %8, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 1
  store i32* %9, i32** %10, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %13 = call i32 @realloccode(i32* %11, %struct.TYPE_8__* %12, i32 2)
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* @NOINST, align 4
  %18 = load i32, i32* @fullset, align 4
  %19 = call i32 @codegen(%struct.TYPE_9__* %5, i32 %16, i32 0, i32 %17, i32 %18)
  %20 = load i32, i32* @IEnd, align 4
  %21 = call i32 @addinstruction(%struct.TYPE_9__* %5, i32 %20, i32 0)
  %22 = load i32*, i32** %3, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @realloccode(i32* %22, %struct.TYPE_8__* %23, i32 %25)
  %27 = call i32 @peephole(%struct.TYPE_9__* %5)
  %28 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  ret i32* %30
}

declare dso_local i32 @realloccode(i32*, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @codegen(%struct.TYPE_9__*, i32, i32, i32, i32) #1

declare dso_local i32 @addinstruction(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @peephole(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
